KNewFileMenu: use destination side to stat destination

BUG: 429541